--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,16 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(aeolus)
 
-
 add_subdirectory(src/gas)
+add_subdirectory(src/util)
+add_subdirectory(src/include/doctest)
+
 add_executable(${PROJECT_NAME} src/main.cpp)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_include_directories(${PROJECT_NAME} PRIVATE src/include)
 target_link_libraries(${PROJECT_NAME} PUBLIC gas)
+target_link_libraries(${PROJECT_NAME} PUBLIC util)
+target_link_libraries(${PROJECT_NAME} PRIVATE doctest)
+
+enable_testing()
+add_test(NAME util_unittest COMMAND src/util/util_unittest)
