Almost finished implementation and testing of reading su2 grid

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,9 +1,10 @@
 set(Kokkos_DIR "../../../kokkos_inst/lib/cmake/Kokkos")
 set(Kokkos_ROOT "../../../kokkos_inst")
 find_package(Kokkos REQUIRED)
-add_library(util STATIC vector3.cpp)
+add_library(util STATIC src/vector3.cpp)
 target_link_libraries(util PUBLIC Kokkos::kokkos)
+target_link_libraries(util PRIVATE doctest)
 
-add_executable(util_unittest unittest.cpp vector3.cpp)
-target_link_libraries(util_unittest PRIVATE doctest::doctest)
+add_executable(util_unittest test/unittest.cpp src/vector3.cpp)
+target_link_libraries(util_unittest PRIVATE doctest)
 target_link_libraries(util_unittest PUBLIC Kokkos::kokkos)
