--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(aeolus)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 add_subdirectory(src/gas)
 add_subdirectory(src/util)
+add_subdirectory(src/grid)
 add_subdirectory(src/include/doctest)
 
 set(Kokkos_DIR "../kokkos_inst/lib/cmake/Kokkos")
@@ -11,13 +14,15 @@ set(Kokkos_ROOT "../kokkos_inst")
 find_package(Kokkos REQUIRED)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_include_directories(${PROJECT_NAME} PRIVATE src/include)
 target_link_libraries(${PROJECT_NAME} PUBLIC gas)
 target_link_libraries(${PROJECT_NAME} PUBLIC util)
+target_link_libraries(${PROJECT_NAME} PUBLIC grid)
 target_link_libraries(${PROJECT_NAME} PUBLIC Kokkos::kokkos)
 target_link_libraries(${PROJECT_NAME} PRIVATE doctest)
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
 
 enable_testing()
 add_test(NAME util_unittest COMMAND src/util/util_unittest)
+add_test(NAME grid_unittest COMMAND src/grid/grid_unittest)
