Some more tests, data structures, and templated a bunch of stuff

--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -2,7 +2,7 @@ set(Kokkos_DIR "../../../kokkos_inst/lib/cmake/Kokkos")
 set(Kokkos_ROOT "../../../kokkos_inst")
 find_package(Kokkos REQUIRED)
 
-add_library(grid STATIC src/grid_io.cpp src/vertex.cpp)
+add_library(grid STATIC src/grid.cpp src/grid_io.cpp src/vertex.cpp)
 target_link_libraries(grid PUBLIC Kokkos::kokkos)
 target_link_libraries(grid PRIVATE doctest)
 
