The fiddly part of the GridBlock constructor is complete, and runs. I still need more unit tests for it all though

--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(Kokkos REQUIRED)
 add_library(grid STATIC src/grid.cpp src/grid_io.cpp src/vertex.cpp src/interface.cpp)
 target_link_libraries(grid PUBLIC Kokkos::kokkos)
 target_link_libraries(grid PRIVATE doctest)
+target_link_libraries(grid PRIVATE util)
 
-add_executable(grid_unittest test/unittest.cpp src/grid_io.cpp)
+add_executable(grid_unittest test/unittest.cpp src/grid_io.cpp src/grid.cpp src/interface.cpp)
+target_link_libraries(grid_unittest PRIVATE util)
 target_link_libraries(grid_unittest PRIVATE doctest)
 target_link_libraries(grid_unittest PRIVATE Kokkos::kokkos)
