--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -5,6 +5,6 @@ add_library(util STATIC src/vector3.cpp src/id.cpp)
 target_link_libraries(util PUBLIC Kokkos::kokkos)
 target_link_libraries(util PRIVATE doctest)
 
-add_executable(util_unittest test/unittest.cpp src/vector3.cpp)
+add_executable(util_unittest test/unittest.cpp src/vector3.cpp src/id.cpp)
 target_link_libraries(util_unittest PRIVATE doctest)
 target_link_libraries(util_unittest PUBLIC Kokkos::kokkos)
