Fixed bug in constructing interfaces, and various other tests/improvements

--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -8,6 +8,7 @@ target_link_libraries(grid PRIVATE doctest)
 target_link_libraries(grid PRIVATE util)
 
 add_executable(grid_unittest test/unittest.cpp src/grid_io.cpp src/grid.cpp src/interface.cpp)
+target_compile_options(grid_unittest PRIVATE -Wall -Wextra -Wpedantic -Werror -g)
 target_link_libraries(grid_unittest PRIVATE util)
 target_link_libraries(grid_unittest PRIVATE doctest)
 target_link_libraries(grid_unittest PRIVATE Kokkos::kokkos)
