--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -6,5 +6,6 @@ target_link_libraries(util PUBLIC Kokkos::kokkos)
 target_link_libraries(util PRIVATE doctest)
 
 add_executable(util_unittest test/unittest.cpp src/vector3.cpp src/id.cpp)
+target_compile_options(util_unittest PRIVATE -Wall -Wextra -Wpedantic -Werror -g)
 target_link_libraries(util_unittest PRIVATE doctest)
 target_link_libraries(util_unittest PUBLIC Kokkos::kokkos)
