--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/include/doctest"]
 	path = extern/doctest
 	url = git@github.com:doctest/doctest.git
+[submodule "extern/kokkos"]
+	path = extern/kokkos
+	url = git@github.com:kokkos/kokkos.git
