set install directory prefix in cmakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.22.1)
 project(ibis)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_INSTALL_PREFIX "../inst")
 
 add_subdirectory(src/gas)
 add_subdirectory(src/util)
