--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -3,7 +3,14 @@ target_link_libraries(grid PUBLIC Kokkos::kokkos)
 target_link_libraries(grid PRIVATE doctest)
 target_link_libraries(grid PRIVATE util)
 
-add_executable(grid_unittest test/unittest.cpp src/grid_io.cpp src/grid.cpp src/interface.cpp)
+add_executable(
+	grid_unittest 
+	test/unittest.cpp 
+	src/grid_io.cpp 
+	src/grid.cpp 
+	src/interface.cpp
+	src/cell.cpp
+)
 target_compile_options(grid_unittest PRIVATE -Wall -Wextra -Wpedantic -g)
 target_link_libraries(grid_unittest PRIVATE util)
 target_link_libraries(grid_unittest PRIVATE doctest)
