Add hanel flux calculator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 enable_testing()
 add_test(NAME util_unittest COMMAND src/util/util_unittest)
 add_test(NAME grid_unittest COMMAND src/grid/grid_unittest)
+add_test(NAME finite_volume_unittest COMMAND src/finite_volume/finite_volume_unittest)
