Begin work on the prep command. At this stage, we just embed the prep.py script into the prep library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,13 @@ add_subdirectory(src/gas)
 add_subdirectory(src/util)
 add_subdirectory(src/grid)
 add_subdirectory(src/finite_volume)
+add_subdirectory(src/ibis/src/commands)
 add_subdirectory(extern/doctest)
 add_subdirectory(extern/kokkos)
 
 add_executable(ibis src/ibis/src/main.cpp)
+target_link_libraries(ibis PUBLIC prep)
 target_compile_features(ibis PRIVATE cxx_std_20)
-target_include_directories(ibis PRIVATE src/include)
 target_link_libraries(ibis PUBLIC gas)
 target_link_libraries(ibis PUBLIC util)
 target_link_libraries(ibis PUBLIC grid)
