The python scripts now ship to the lib install directory, and the executable finds them via environment variables.

--- a/src/ibis/src/commands/CMakeLists.txt
+++ b/src/ibis/src/commands/CMakeLists.txt
@@ -1,9 +1,10 @@
 find_package(Python COMPONENTS Interpreter Development)
 
-include(${CMAKE_SOURCE_DIR}/cmake/file_embed.cmake)
-
 add_library(prep STATIC prep.cpp)
-FileEmbedSetup()
-FileEmbedAdd(${CMAKE_SOURCE_DIR}/src/ibis/src/commands/prep.py)
 target_link_libraries(prep PRIVATE Python::Python)
-target_link_libraries(prep PRIVATE file_embed)
+
+add_custom_command(
+	TARGET prep POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+        ${CMAKE_SOURCE_DIR}/src/ibis/src/commands/prep.py $<TARGET_FILE_DIR:prep>
+)
