--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(ibis PRIVATE ibis_git_version)
 target_compile_options(ibis PRIVATE -Wall -Wextra -Wpedantic)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+install(FILES src/ibis/src/commands/prep.py DESTINATION lib)
 
 enable_testing()
 add_test(NAME util_unittest COMMAND src/util/util_unittest)
