--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,12 @@ add_subdirectory(src/util)
 add_subdirectory(src/grid)
 add_subdirectory(src/finite_volume)
 add_subdirectory(src/ibis/src/commands)
+add_subdirectory(src/solvers)
 add_subdirectory(extern/doctest)
 add_subdirectory(extern/kokkos)
 
 add_executable(ibis src/ibis/src/main.cpp)
+target_include_directories(ibis PUBLIC ${CMAKE_SOURCE_DIR}/src)
 target_link_libraries(ibis PUBLIC prep)
 target_compile_features(ibis PRIVATE cxx_std_20)
 target_link_libraries(ibis PUBLIC gas)
