Some more progress from the last few days

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_subdirectory(extern/kokkos)
 add_executable(ibis src/ibis/src/main.cpp)
 target_include_directories(ibis PUBLIC ${CMAKE_SOURCE_DIR}/src)
 target_link_libraries(ibis PUBLIC prep)
+target_link_libraries(ibis PUBLIC ibis_clean)
 target_compile_features(ibis PRIVATE cxx_std_20)
 target_link_libraries(ibis PUBLIC gas)
 target_link_libraries(ibis PUBLIC util)
@@ -32,6 +33,8 @@ target_compile_options(ibis PRIVATE -Wall -Wextra -Wpedantic)
 
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 install(FILES src/ibis/src/commands/prep.py DESTINATION lib)
+install(FILES src/ibis/src/commands/ibis_py_utils.py DESTINATION lib)
+install(FILES src/ibis/src/commands/clean.py DESTINATION lib)
 install(DIRECTORY resources DESTINATION .)
 
 enable_testing()
