continue working on getting things set up. The run command doesn't seem to be able to read grids yet...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,17 +17,19 @@ add_subdirectory(src/ibis/src/commands)
 add_subdirectory(src/solvers)
 add_subdirectory(extern/doctest)
 add_subdirectory(extern/kokkos)
+add_subdirectory(extern/json)
 
 add_executable(ibis src/ibis/src/main.cpp)
 target_include_directories(ibis PUBLIC ${CMAKE_SOURCE_DIR}/src)
 target_link_libraries(ibis PUBLIC prep)
+target_link_libraries(ibis PUBLIC run)
 target_link_libraries(ibis PUBLIC ibis_clean)
 target_compile_features(ibis PRIVATE cxx_std_20)
 target_link_libraries(ibis PUBLIC gas)
 target_link_libraries(ibis PUBLIC util)
 target_link_libraries(ibis PUBLIC grid)
-target_link_libraries(ibis PUBLIC Kokkos::kokkos)
-target_link_libraries(ibis PRIVATE doctest)
+# target_link_libraries(ibis PUBLIC Kokkos::kokkos)
+target_link_libraries(ibis PUBLIC doctest)
 target_link_libraries(ibis PRIVATE ibis_git_version)
 target_compile_options(ibis PRIVATE -Wall -Wextra -Wpedantic)
 
