--- a/examples/wedge20/config/config.json
+++ b/examples/wedge20/config/config.json
@@ -2,5 +2,9 @@
     "convective_flux": {
         "flux_calculator": "hanel",
         "reconstruction_order": 1
+    },
+    "solver": {
+        "name": "runge_kutta",
+        "cfl": 0.5
     }
 }
