--- a/src/ibis/src/commands/CMakeLists.txt
+++ b/src/ibis/src/commands/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(ibis_clean STATIC clean.cpp)
 target_link_libraries(ibis_clean PRIVATE Python::Python)
 
 add_library(run STATIC run.cpp)
-target_link_libraries(run PUBLIC Kokkos::kokkos doctest grid nlohmann_json::nlohmann_json)
+target_link_libraries(run PUBLIC Kokkos::kokkos doctest grid runge_kutta solver nlohmann_json::nlohmann_json)
 
 
 add_custom_command(
