--- a/examples/wedge20/config/config.json
+++ b/examples/wedge20/config/config.json
@@ -10,6 +10,24 @@
         "max_step": 100,
         "print_frequency": 20,
         "plot_frequency": 0.001,
-        "plot_every_n_steps": 20
+        "plot_every_n_steps": -1
+    },
+    "grid": {
+        "boundaries": {
+            "left": {
+                "pre_reconstruction": [
+                    {
+                        "type": "flow_state_copy",
+                        "flow_state": {
+                            "p": 105472.50000000001,
+                            "T": 300.0,
+                            "vx": 1000.0,
+                            "vy": 0.0,
+                            "vz": 0.0
+                        }
+                    }
+                ]
+            }
+        }
     }
 }
