Use explicit template instantiation to allow implementation of templates separate to header files

--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -1,5 +1,5 @@
-# add_library(finite_volume STATIC)
-# target_link_libraries(grid PUBLIC Kokkos::kokkos)
+add_library(finite_volume STATIC src/finite_volume.cpp src/flux_calc.cpp src/flow_state_conserved_conversion.cpp)
+target_link_libraries(finite_volume PUBLIC Kokkos::kokkos doctest util)
 # target_link_libraries(grid PRIVATE doctest)
 # target_link_libraries(grid PRIVATE util)
 #
