--- a/src/gas/CMakeLists.txt
+++ b/src/gas/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(gas STATIC src/gas_state.cpp)
+add_library(gas STATIC src/gas_state.cpp src/flow_state.cpp)
 target_link_libraries(gas PUBLIC Kokkos::kokkos)
