--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -1,4 +1,13 @@
-add_library(grid STATIC src/grid_io.cpp src/vertex.cpp src/interface.cpp)
+add_library(
+	grid 
+	STATIC 
+	src/grid_io.cpp 
+	src/vertex.cpp 
+	src/interface.cpp 
+	src/grid.cpp 
+	src/cell.cpp
+)
+
 target_link_libraries(grid PUBLIC Kokkos::kokkos doctest util)
 
 add_executable(
@@ -8,6 +17,7 @@ add_executable(
 	src/grid.cpp 
 	src/interface.cpp
 	src/cell.cpp
+	src/vertex.cpp
 )
 target_compile_options(grid_unittest PRIVATE -Wall -Wextra -Wpedantic -g)
 target_link_libraries(grid_unittest PRIVATE util)
