--- a/examples/wedge20/config/config.json
+++ b/examples/wedge20/config/config.json
@@ -26,7 +26,8 @@
                             "vz": 0.0
                         }
                     }
-                ]
+                ],
+                "ghost_cells": true
             }
         }
     }
