--- a/src/ibis/src/commands/CMakeLists.txt
+++ b/src/ibis/src/commands/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Python COMPONENTS Interpreter Development)
 
 add_library(prep STATIC prep.cpp)
-target_link_libraries(prep PRIVATE Python::Python)
+target_link_libraries(prep PRIVATE Python::Python spdlog::spdlog)
 
 add_library(ibis_clean STATIC clean.cpp)
 target_link_libraries(ibis_clean PRIVATE Python::Python)
@@ -16,6 +16,7 @@ target_link_libraries(
         solver 
         nlohmann_json::nlohmann_json
         gas
+        spdlog::spdlog
 )
 
 
