--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -1,7 +1,14 @@
 add_library(solver STATIC src/solver.cpp src/solver.h)
 # target_include_directories(solver PUBLIC ${CMAKE_SOURCE_DIR}/extern/json/single_include)
-target_link_libraries(solver PUBLIC Kokkos::kokkos nlohmann_json::nlohmann_json grid gas)
-# target_link_libraries(solver PUBLIC json)
+target_link_libraries(
+	solver 
+	PUBLIC 
+	Kokkos::kokkos 
+	nlohmann_json::nlohmann_json 
+	grid 
+	gas
+	spdlog::spdlog
+)
 
 add_library(runge_kutta STATIC src/runge_kutta.cpp src/solver.cpp)
 target_link_libraries(
@@ -13,4 +20,5 @@ target_link_libraries(
 	grid 
 	nlohmann_json::nlohmann_json
 	finite_volume
+	spdlog::spdlog
 )
