Added forward facing step example, and use gmsh to build grids in the examples

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ examples/**/grid
 examples/**/config
 examples/**/log
 examples/**/plot
+tests/**/flow
+tests/**/grid
+tests/**/config
+tests/**/log
+tests/**/plot
