Cuda CI testing: Attempt to only download nvcc to save space on the CI server

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -18,6 +18,8 @@ jobs:
       id: cuda-toolkit
       with:
         cuda: '12.2.0'
+        sub-packages: '["nvcc"]'
+        method: 'network'
 
     - name: configure
       run: >
