--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,8 +22,7 @@ jobs:
         method: 'network'
 
     - name: configure
-      run: >
-        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_CUDA=ON
 
     - name: build
       run: cmake --build ${{github.workspace}}/build --config Release
