CI testing: enable specific cuda architecture, since the VM doesn't have a GPU, kokkos can't auto-detect which architecture to use

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,7 +22,7 @@ jobs:
         method: 'network'
 
     - name: configure
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_CUDA=ON
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DKokkos_ENABLE_CUDA=ON -DKokkos_ARCH_AMPERE80=ON
 
     - name: build
       run: cmake --build ${{github.workspace}}/build --config Release
