--- a/src/ibis/src/commands/CMakeLists.txt
+++ b/src/ibis/src/commands/CMakeLists.txt
@@ -1,10 +1,10 @@
 find_package(Python COMPONENTS Interpreter Development)
 
 add_library(prep STATIC prep.cpp)
-target_link_libraries(prep PRIVATE Python::Python spdlog::spdlog)
+target_link_libraries(prep PRIVATE Python::Python spdlog::spdlog runtime_dirs)
 
 add_library(ibis_clean STATIC clean.cpp)
-target_link_libraries(ibis_clean PRIVATE Python::Python spdlog::spdlog)
+target_link_libraries(ibis_clean PRIVATE Python::Python spdlog::spdlog runtime_dirs)
 
 add_library(run STATIC run.cpp ../config.cpp)
 target_link_libraries(
@@ -17,7 +17,9 @@ target_link_libraries(
         nlohmann_json::nlohmann_json
         gas
         spdlog::spdlog
+        runtime_dirs
 )
+
 
 add_library(post STATIC post.cpp post_commands/plot_vtk.cpp ../config.cpp)
 target_link_libraries(
@@ -28,6 +30,7 @@ target_link_libraries(
         Kokkos::kokkos
         gas
         grid
+        runtime_dirs
 )
 
 
@@ -43,3 +46,10 @@ add_custom_command(
         COMMAND ${CMAKE_COMMAND} -E copy
         ${CMAKE_SOURCE_DIR}/src/ibis/src/commands/clean.py $<TARGET_FILE_DIR:ibis_clean>
 )
+
+install(FILES prep.py 
+        DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILES ibis_py_utils.py 
+        DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(FILES clean.py
+        DESTINATION ${CMAKE_INSTALL_LIBDIR})
