The solver now seems to operate non-dimensionalised, but there is a bug with the time step, and I still need to re-dimensionalise in post processing

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_library(solver STATIC src/solver.cpp src/solver.h)
-# target_include_directories(solver PUBLIC ${CMAKE_SOURCE_DIR}/extern/json/single_include)
+add_library(
+	solver 
+	STATIC 
+	src/solver.cpp
+	src/units.cpp
+)
 target_link_libraries(
 	solver 
 	PUBLIC 
@@ -10,17 +14,4 @@ target_link_libraries(
 	spdlog::spdlog
 )
 
-add_library(runge_kutta STATIC src/runge_kutta.cpp)
-target_link_libraries(
-	runge_kutta 
-	PUBLIC 
-	Kokkos::kokkos 
-	doctest 
-	util 
-	grid 
-	nlohmann_json::nlohmann_json
-	finite_volume
-	solver
-	spdlog::spdlog
-	IO
-)
+add_subdirectory(src/runge_kutta)
