--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -2,7 +2,7 @@ pybind11_add_module(
 	python_api
 	src/python_api.cpp 
 )
-set_property(TARGET python_api PROPERTY CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
+set_target_properties(python_api PROPERTIES INTERPROCEDURAL_OPTIMIZATION OFF)
 
 target_link_libraries(
 	python_api
