Disable link time optimisation when building the python library to avoid link errors when compiling with CUDA

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -1,5 +1,6 @@
 pybind11_add_module(
 	python_api
+	NO_EXTRAS
 	src/python_api.cpp 
 )
 set_target_properties(python_api PROPERTIES INTERPROCEDURAL_OPTIMIZATION OFF)
