Begin adding ideal gas model

--- a/src/gas/CMakeLists.txt
+++ b/src/gas/CMakeLists.txt
@@ -1,2 +1,14 @@
-add_library(gas STATIC src/gas_state.cpp src/flow_state.cpp)
-target_link_libraries(gas PUBLIC Kokkos::kokkos)
+add_library(
+	gas
+	STATIC
+	src/gas_state.cpp
+	src/gas_model.cpp
+	src/flow_state.cpp
+)
+
+target_link_libraries(
+	gas
+	PUBLIC
+	Kokkos::kokkos 
+	nlohmann_json::nlohmann_json
+)
