Connect the ideal gas model up to the python input layer

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(
 	doctest
 	spdlog::spdlog
 	finite_volume
+	gas
 )
 
 install(TARGETS python_api DESTINATION ${CMAKE_INSTALL_LIBDIR})
