Some more progress adding a gas model

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,1 +1,2 @@
 install(DIRECTORY defaults DESTINATION ${CMAKE_INSTALL_DATADIR})
+install(DIRECTORY gas_models DESTINATION ${CMAKE_INSTALL_DATADIR})
