make bunya compile work
- add stdc++fs to ibis target_link_libraries
- use find_package(Python) which prompts CMake's FindPython module to
  locate python correctly

--- a/src/ibis/CMakeLists.txt
+++ b/src/ibis/CMakeLists.txt
@@ -17,5 +17,6 @@ target_link_libraries(
 	runtime_dirs
 	spdlog::spdlog
 	solver
+	stdc++fs
 )
 install(TARGETS ibis DESTINATION ${CMAKE_INSTALL_BIN_DIR})
