Keep compilation working on all architectures

--- a/src/ibis/CMakeLists.txt
+++ b/src/ibis/CMakeLists.txt
@@ -17,6 +17,8 @@ target_link_libraries(
 	runtime_dirs
 	spdlog::spdlog
 	solver
-	stdc++fs
 )
+if (Kokkos_ENABLE_HIP)
+	target_link_libraries(ibis PUBILC stdc++fs)
+endif()
 install(TARGETS ibis DESTINATION ${CMAKE_INSTALL_BIN_DIR})
